src/main/java/com/example/apiwords/errors/Error_response.java
package com.example.apiwords.errors;

import lombok.Getter;
import lombok.Setter;
import org.springframework.http.HttpStatus;

@Getter
@Setter
public class Error_response {

    private HttpStatus code;
    private String message;

    public Error_response(HttpStatus code, String message) {
        this.code = code;
        this.message = message;
    }


}
